# sane-python-lib-dev-env

./: .gitignore  pyproject.toml  tox.ini
docs/: approach.rst  conf.py  index.rst  intro.rst  presentation.rst  setup.rst  tools.rst
