[tool.poetry]
name = "sane-python-lib-dev-env"
version = "0.1.0"
description = "An attempt to define tools and practices for a sane Python library development environment"
authors = ["Emmanuel Sciara <emmanuel.sciara@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

# Using a similar approach to `tox` (see `setup.cfg` and `tox.ini` files at https://github.com/tox-dev/tox)
# and creating extras for use in `tox.ini` instead of using [tool.poetry.dev-dependencies]
#
# Optional dependencies to be part of `docs` extra
sphinx = { version = ">= 2.0.0, < 3", optional = true }
towncrier = { version = ">= 18.5.0", optional = true }
pygments-github-lexers = { version = ">= 0.0.5", optional = true }
sphinxcontrib-autoprogram = { version = ">= 0.1.5", optional = true }
sphinx_bootstrap_theme = { version = "^0.7.1", optional = true }

[tool.poetry.dev-dependencies]
tox = "^3.13"
commitizen = "^1.5"

[options.extras_require]
docs = ["sphinx", "towncrier", "pygments-github-lexers", "sphinxcontrib-autoprogram", "sphinx_bootstrap_theme"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
